--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -4,3 +4,12 @@
 
 <%= link_to 'Show', @client %> |
 <%= link_to 'Back', clients_path %>
+
+
+<h1> Update Your Account Email Address</h1>
+
+<form method="post" action="/clients/<%=@client.id%>">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  Email<input id="email" type="text" value="<%=@client.email%>" name="email">
+  <input type="submit" value="submit">
+</form>
