--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -23,3 +23,61 @@
 <br>
 
 <%= link_to 'New Account', new_account_path %>
+
+
+<h2>Welcome to Accounts</h2>
+<h3>These Are Your Current Account Balances<h3>
+
+<%current_client.accounts.each do |account|%>
+  <h3>Account: <%=account.name%></h3>
+  <p>Balance: $<%=account.balance%></p>
+<%end%>
+<br/>
+<br/>
+<form action="/accounts/transfer" method="post">
+
+<h3>Transfer Between Accounts </h3>
+<h4><%=flash[:notice]%></h4>
+  <label>Transfer From</label>
+  <br/>
+  <input type="text" name="account_from_name" id="account_from_name" placeholder="account name">
+  <br/>
+  <label>Transfer To</label>
+  <br/>
+  <input type="text" name="account_to_name" id="account_to_name" placeholder="destination account name">
+  <br/>
+  <label>Amount to Transfer</label>
+  <br/>
+  <input type="text" name="transaction_amount" id="transaction_amount" placeholder="amount to transfer">
+
+  <input type="submit" value="Transfer">
+</form>
+
+<br/>
+<br/>
+<form action="/accounts/transfer/outside" method="post">
+
+<h3>Transfer to Another Bank Account Holder </h3>
+  <label>Transfer From</label>
+  <br/>
+  <input type="text" name="account_from_name" id="account_from_name" placeholder="account name">
+  <br/>
+  <label>Transfer To Another User's Bank of Flatiron Checking Account. Enter Email and Account Name</label>
+  <br/>
+  <input type="text" name="account_to_email" id="account_to_email" placeholder="destination account email">
+  <br/>
+    <label>Please also enter this Individual's Account Name</label>
+  <br/>
+  <input type="text" name="account_to_name" id="account_to_name" placeholder="destination account name">
+  <br/>
+  <label>Amount to Transfer</label>
+  <br/>
+  <input type="text" name="transaction_amount" id="transaction_amount" placeholder="amount to transfer">
+
+  <input type="submit" value="Transfer">
+</form>
+
+<ol>
+  <li><a href="/accounts/new">Create an Additional Account</a></li>
+  <li><a href="/sessions/logout">Log Out</a></li>
+</ol>
