application layout links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
        <a href="/sessions/logout"> Log Out </a>
        <a href="/clients/<%=current_client.id%>"> Account Summary </a>
      <% else %>
-       <a href="/registrations/signup">Sign Up</a>
-       <a href="/sessions/login"> Sign In </a>
+       <a href="/signup">Sign Up</a>
+       <a href="/login"> Sign In </a>
      <%end %>
 
    </nav>
