--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -8,10 +8,9 @@
 
 <h1> Update An Account Name</h1>
 
-<form method="post" action="/accounts/<%=@account.id%>">
-  <input id="hidden" type="hidden" name="_method" value="patch">
-  Name<input id="name" type="text" value="<%=@account.name%>" name="name">
+  <%= form_tag accounts_path do %>
+  Name: <br/><%= text_field_tag "name" %><br/>
   <br/>
-
-  <input type="submit" value="submit">
-</form>
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+  <%= submit_tag "Edit Account" %>
+<% end %>
