--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -25,6 +25,8 @@
 <%= link_to 'New Account', new_account_path %>
 
 
+
+
 <h2>Welcome to Accounts</h2>
 <h3>These Are Your Current Account Balances<h3>
 
@@ -34,48 +36,58 @@
 <%end%>
 <br/>
 <br/>
-<form action="/accounts/transfer" method="post">
+
 
 <h3>Transfer Between Accounts </h3>
 <h4><%=flash[:notice]%></h4>
-  <label>Transfer From</label>
-  <br/>
-  <input type="text" name="account_from_name" id="account_from_name" placeholder="account name">
-  <br/>
-  <label>Transfer To</label>
-  <br/>
-  <input type="text" name="account_to_name" id="account_to_name" placeholder="destination account name">
-  <br/>
-  <label>Amount to Transfer</label>
-  <br/>
-  <input type="text" name="transaction_amount" id="transaction_amount" placeholder="amount to transfer">
 
-  <input type="submit" value="Transfer">
-</form>
+<%= form_tag("/accounts/transfer") do %>
+<label>Transfer From</label>
+<br/>
+Account from Name: <br/><%= text_field_tag "account_from_name" %><br/>
+<br/>
+<label>Transfer To</label>
+<br/>
+Account to Name: <br/><%= text_field_tag "account_to_name" %><br/>
+<br/>
+<label>Amount to Transfer</label>
+<br/>
+Amount to Transfer: <br/><%= text_field_tag "transaction_amount" %><br/>
 
+<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+<%= submit_tag "Transfer" %>
+<% end %>
 <br/>
 <br/>
-<form action="/accounts/transfer/outside" method="post">
 
-<h3>Transfer to Another Bank Account Holder </h3>
-  <label>Transfer From</label>
-  <br/>
-  <input type="text" name="account_from_name" id="account_from_name" placeholder="account name">
-  <br/>
-  <label>Transfer To Another User's Bank of Flatiron Checking Account. Enter Email and Account Name</label>
-  <br/>
-  <input type="text" name="account_to_email" id="account_to_email" placeholder="destination account email">
-  <br/>
-    <label>Please also enter this Individual's Account Name</label>
-  <br/>
-  <input type="text" name="account_to_name" id="account_to_name" placeholder="destination account name">
-  <br/>
-  <label>Amount to Transfer</label>
-  <br/>
-  <input type="text" name="transaction_amount" id="transaction_amount" placeholder="amount to transfer">
 
-  <input type="submit" value="Transfer">
-</form>
+<h3>Transfer Between Accounts </h3>
+<h4><%=flash[:notice]%></h4>
+
+<%= form_tag("/accounts/transfer/outside") do %>
+<h3>Transfer to Another Bank Account Holder</h3>
+<label>Transfer From</label>
+<br/>
+Account from Name: <br/><%= text_field_tag "account_from_name" %><br/>
+<br/>
+<label>Transfer To</label>
+<br/>
+Email of the Account Holder You'd Like to Transfer to: <br/><%= text_field_tag "account_to_email" %><br/>
+<br/>
+<label>Transfer To Account Name</label>
+<br/>
+Name of the Outside Account You'd Like to Transfer to: <br/><%= text_field_tag "account_to_name" %><br/>
+<br/>
+<label>Amount to Transfer</label>
+<br/>
+Amount to Transfer: <br/><%= text_field_tag "transaction_amount" %><br/>
+
+<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+<%= submit_tag "Transfer" %>
+<% end %>
+
+
+
 
 <ol>
   <li><a href="/accounts/new">Create an Additional Account</a></li>
