--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -6,20 +6,20 @@
 
 <h1>Create a new Account</h1>
 
-<form action="/accounts" method="POST">
-
+  <%= form_tag('/accounts') do %>
   <label>Name</label>
   <br/>
-  <input type="text" name="name" id="name" placeholder="name">
+  Name: <br/><%= text_field_tag "name" %><br/>
   <br/>
   <label>Opening Deposit</label>
   <label>Please Create Your Account with a $50 Minimum Opening Deposit</label>
   <br/>
-  <input type="integer" name="initial_deposit" id="initial_deposit" placeholder="opening deposit">
+  Opening Deposit: <br/><%= number_field_tag "initial_deposit" %><br/>
   <br/>
   <label>Overdraft Protection ($200 Limit)</label>
   <br/>
   <input type="checkbox" name="overdraft_protection" id="overdraft_protection">
   <br/>
-  <input type="submit" value="Create Account">
-</form>
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+  <%= submit_tag "Create Account" %>
+<% end %>
