--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -8,8 +8,9 @@
 
 <h1> Update Your Account Email Address</h1>
 
-<form method="post" action="/clients/<%=@client.id%>">
-  <input id="hidden" type="hidden" name="_method" value="patch">
-  Email<input id="email" type="text" value="<%=@client.email%>" name="email">
-  <input type="submit" value="submit">
-</form>
+<%= form_tag clients_path do %>
+Email: <br/><%= text_field_tag "<%=@client.email%>" %><br/>
+<br/>
+<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+<%= submit_tag "Edit Account" %>
+<% end %>
