--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -9,7 +9,7 @@
 <h1> Update Your Account Email Address</h1>
 
 <%= form_tag clients_path do %>
-Email: <br/><%= text_field_tag "<%=@client.email%>" %><br/>
+Email: <br/><%= text_field_tag :email @client.email %><br/>
 <br/>
 <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 <%= submit_tag "Edit Account" %>
