--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -8,7 +8,7 @@
 
 <h1> Update An Account Name</h1>
 
-  <%= form_tag accounts_path do %>
+  <%= form_tag account_path(@account), method: "put" do %>
   Name: <br/><%= text_field_tag :name, @account.name %><br/>
   <br/>
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
