--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -8,7 +8,7 @@
 
 <h1> Update Your Account Email Address</h1>
 
-<%= form_tag clients_path do %>
+<%= form_tag client_path(@client), method: "put" do %>
 Email: <br/><%= text_field_tag :email @client.email %><br/>
 <br/>
 <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
