--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -8,9 +8,9 @@
 
 <h1> Update An Account Name</h1>
 
-  <%= form_tag account_path(@account), method: "put" do %>
-  Name: <br/><%= text_field_tag :name, @account.name %><br/>
+  <%= form_for(@account) do |f| %>
+  Name: <br/><%= f.text_field :name %><br/>
   <br/>
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-  <%= submit_tag "Edit Account" %>
+  <%= f.submit %>
 <% end %>
