--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -8,9 +8,9 @@
 
 <h1> Update Your Account Email Address</h1>
 
-<%= form_tag client_path(@client), method: "put" do %>
-Email: <br/><%= text_field_tag :email @client.email %><br/>
+<%= form_for(@client) do |f| %>
+Email: <br/><%= f.text_field :email %><br/>
 <br/>
 <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-<%= submit_tag "Edit Account" %>
+<%= f.submit %>
 <% end %>
