--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -8,7 +8,7 @@
 <br/>
 <h2>Here are Your Account Summaries:</h2>
 <ul>
-  <%current_client.accounts.each do |account|%>
+  <%@client.accounts.each do |account|%>
   <a href="/accounts/<%=account.id%>">
     <h3><%=account.name%></h3>
   </a>
