label_tag accounts/index

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -42,15 +42,15 @@
 <h4><%=flash[:notice]%></h4>
 
 <%= form_tag("/accounts/transfer") do %>
-<label>Transfer From</label>
+<%= label_tag "transfer_from", "Transfer From" %>
 <br/>
 Account from Name: <br/><%= text_field_tag "account_from_name" %><br/>
 <br/>
-<label>Transfer To</label>
+<%= label_tag "transfer_to", "Transfer To" %>
 <br/>
 Account to Name: <br/><%= text_field_tag "account_to_name" %><br/>
 <br/>
-<label>Amount to Transfer</label>
+<%= label_tag "amount", "Amount" %>
 <br/>
 Amount to Transfer: <br/><%= number_field_tag "transaction_amount" %><br/>
 
@@ -66,19 +66,19 @@ Amount to Transfer: <br/><%= number_field_tag "transaction_amount" %><br/>
 
 <%= form_tag("/accounts/transfer/outside") do %>
 <h3>Transfer to Another Bank Account Holder</h3>
-<label>Transfer From</label>
+<%= label_tag "transfer_from", "Transfer From" %>
 <br/>
 Account from Name: <br/><%= text_field_tag "account_from_name" %><br/>
 <br/>
-<label>Transfer To</label>
+<%= label_tag "transfer_to_email", "Transfer To Email" %>
 <br/>
 Email of the Account Holder You'd Like to Transfer to: <br/><%= text_field_tag "account_to_email" %><br/>
 <br/>
-<label>Transfer To Account Name</label>
+<%= label_tag "transfer_to_account_name", "Transfer To Account Name" %>
 <br/>
 Name of the Outside Account You'd Like to Transfer to: <br/><%= text_field_tag "account_to_name" %><br/>
 <br/>
-<label>Amount to Transfer</label>
+<%= label_tag "amount", "Amount" %>
 <br/>
 Amount to Transfer: <br/><%= number_field_tag "transaction_amount" %><br/>
 
