--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -9,7 +9,8 @@
 <h1> Update An Account Name</h1>
 
   <%= form_for(@account) do |f| %>
-  Name: <br/><%= f.text_field :name %><br/>
+  <%= label_tag "name", "Name" %>
+  <br/><%= f.text_field :name %><br/>
   <br/>
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <%= f.submit %>
