--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -10,7 +10,7 @@
 
   <%= form_for(@account) do |f| %>
   <%= label_tag "name", "Name" %>
-  <br/><%= f.text_field :name %><br/>
+  <br/><%= f.text_field :name, :placeholder => "name" %><br/>
   <br/>
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <%= f.submit %>
