--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -9,7 +9,7 @@
 <h1> Update Your Account Email Address</h1>
 
 <%= form_for(@client) do |f| %>
-Email: <br/><%= f.text_field :email %><br/>
+Email: <br/><%= f.text_field :email, :placeholder => "email"  %><br/>
 <br/>
 <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 <%= f.submit %>
