--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -25,7 +25,7 @@
 <%= link_to 'New Account', new_account_path %>
 
 
-
+<h1>Hi there, <%= current_user.name %></h1>.
 
 <h2>Welcome to Accounts</h2>
 <h3>These Are Your Current Account Balances<h3>
