--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,12 @@
 <body>
   <nav>
        <a href="/"> Home </a>
-     <% if logged_in? %>
+
        <%= link_to("Sign Out", destroy_user_session_path) %>
-       <a href="/clients/<%=current_client.id%>"> Account Summary </a>
-     <% else %>
+       <a href="/clients/<%=current_user%>"> Account Summary </a>
+
      <%= link_to("Sign Up", new_user_registration_path) %>
-     <%end %>
+
 
    </nav>
 <br>
